# jira-promps-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jira_prompts_mcp_server/: __init__.py  __main__.py  cli.py  server.py
src/jira_prompts_mcp_server/jira/: __init__.py  client.py
src/jira_prompts_mcp_server/jira_utils/: client.py  config.py  issues.py  preprocessing.py
