[project]
name = "jira-prompts-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastmcp>=2.3.4",
    "jira>=3.8.0",
    "markdownify>=1.1.0",
    "pydantic>=2.11.3",
    "typer>=0.15.2",
]

[[project.authors]]
name = "Ceshine Lee"
email = "shuanck@gmail.com"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jira-prompts-mcp-server = "jira_prompts_mcp_server:entry_point"
